<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        style="@style/EditText"
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/edit_text_label" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioTen"
            style="@style/RadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_pct_label" />

        <RadioButton
            android:id="@+id/radioFifteen"
            style="@style/RadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_pct_label" />

        <RadioButton
            android:id="@+id/radioEighteen"
            style="@style/RadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eighteen_pct_label" />

        <RadioButton
            android:id="@+id/radioTwenty"
            style="@style/RadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty_pct_label" />

        <RadioButton
            android:id="@+id/radioTwentyFive"
            style="@style/RadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twentyfive_pct_label" />
    </RadioGroup>

    <Button
        style="@style/BtnTip"
        android:id="@+id/btnTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label" />

</LinearLayout>